cf_analysis_results/checkerframework_3.43.0_WPI_results_JDK_11/url64700e9ab7_dwicke_course_scheduler_tgz-pJ8-org_json_TestJ8.txt
../dataset/june2020_dataset_copy/url64700e9ab7_dwicke_course_scheduler_tgz-pJ8-org_json_TestJ8/src/coursescheduleapp/view/ResultsController.java:345: error: (required.method.not.called) $$ 4 $$ method close $$ wr $$ java.io.FileWriter $$ possible exceptional exit due to wr.write(text) with exception type java.io.IOException $$ ( 7995, 8045 ) $$ @MustCall method close may not have been invoked on wr or any of its aliases.
			java.io.FileWriter wr = new java.io.FileWriter(f);
			                   ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: possible exceptional exit due to wr.write(text) with exception type java.io.IOException
../dataset/june2020_dataset_copy/url64700e9ab7_dwicke_course_scheduler_tgz-pJ8-org_json_TestJ8/src/coursescheduleapp/model/CourseDatabase.java:27: error: (required.method.not.called) $$ 4 $$ method close $$ DriverManager.getConnection("jdbc:sqlite:classes.sqlite") $$ java.sql.Connection $$ possible exceptional exit due to conn.createStatement() with exception type java.sql.SQLException $$ ( 672, 729 ) $$ @MustCall method close may not have been invoked on DriverManager.getConnection("jdbc:sqlite:classes.sqlite") or any of its aliases.
        conn = DriverManager.getConnection("jdbc:sqlite:classes.sqlite");
                                          ^
  The type of object is: java.sql.Connection.
  Reason for going out of scope: possible exceptional exit due to conn.createStatement() with exception type java.sql.SQLException
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
